Fixing meta description for main document

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="description" content="DressHub - Rent designer clothing and accessories. Browse our collection of stylish garments available for rent. Perfect for special occasions, events, or trying new styles without the commitment." />
+    <title>DressHub - Rent Designer Clothing & Accessories</title>
   </head>
   <body>
     <div id="root"></div>
